--- a/Readme
+++ b/Readme
@@ -1,3 +1,13 @@
+Latest Update ! Currently hosted on IPFS.
+
+- Restructured code, must more proper functionality with restorations.
+- (Will restore properly in sequence with callbacks)
+- Small refresh of some design
+- Uses 2 source targets from community sites for public nodes, thanks to the sources listed on the page!
+- Just better.
+
+
+
 =====================================================================================
 =                       IOTABalance v1.0.2-beta Release                             =
 =                             Local Web Edition                                     =
